Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-18786

Intermittent failure in AuditTest.AuditStartedStopped

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 4.5.0
    • 4.5.0
    • memcached
    • None
    • Untriaged
    • Unknown
    • KV: Mar 16 - Mar 29

    Description

      Intermittent failure in one of the auditd unit tests (AuditTest.AuditStartedStopped):

      00:07:25.558 [ RUN      ] AuditTest.AuditStartedStopped
      00:07:25.558 /home/couchbase/jenkins/workspace/memcached-gerrit-watson/label/ubuntu-1204/memcached/tests/testapp/testapp.cc:816: Failure
      00:07:25.558 Value of: WIFEXITED(status)
      00:07:25.558   Actual: false
      00:07:25.558 Expected: true
      00:07:25.558 [  FAILED  ] AuditTest.AuditStartedStopped (1469 ms)
      00:07:25.558 [ RUN      ] AuditTest.AuditFailedAuth
      00:07:25.558 *** Fatal error encountered during exception handling ***
      00:07:25.558 Call stack:
      00:07:25.558     /home/couchbase/jenkins/workspace/memcached-gerrit-watson/label/ubuntu-1204/build/platform/libplatform.so.0.1.0(print_backtrace_to_buffer+0x37) [0x2b5bb06fc757]
      00:07:25.558     ./memcached() [0x435a14]
      00:07:25.558     /usr/lib/x86_64-linux-gnu/libstdc++.so.6() [0x2b5bb1a5fce6]
      00:07:25.558     /usr/lib/x86_64-linux-gnu/libstdc++.so.6() [0x2b5bb1a5fd31]
      00:07:25.558     /usr/lib/x86_64-linux-gnu/libstdc++.so.6() [0x2b5bb1a5ff48]
      00:07:25.558     /home/couchbase/jenkins/workspace/memcached-gerrit-watson/label/ubuntu-1204/build/platform/libplatform.so.0.1.0(cb_mutex_enter+0xc0) [0x2b5bb06f8540]
      00:07:25.558     default_engine.so() [0x2b5bb3c22935]
      00:07:25.558     default_engine.so() [0x2b5bb3c1d472]
      00:07:25.558     default_engine.so() [0x2b5bb3c1d781]
      00:07:25.558     /home/couchbase/jenkins/workspace/memcached-gerrit-watson/label/ubuntu-1204/build/platform/libplatform.so.0.1.0() [0x2b5bb06f805a]
      00:07:25.558     /lib/x86_64-linux-gnu/libpthread.so.0() [0x2b5bb0918e9a]
      00:07:25.558     /lib/x86_64-linux-gnu/libc.so.6(clone+0x6d) [0x2b5bb201038d]
      00:07:25.558 
      00:07:25.558 terminate called after throwing an instance of 'std::system_error'
      00:07:25.558   what():  Failed to lock mutex: Invalid argument
      

      Backtrace from the core file (with proper symbols):

      #0  0x00002b5bb1f530d5 in __GI_raise (sig=<optimized out>) at ../nptl/sysdeps/unix/sysv/linux/raise.c:64
      #1  0x00002b5bb1f5683b in __GI_abort () at abort.c:91
      #2  0x00002b5bb1a61c9d in __gnu_cxx::__verbose_terminate_handler() () from /usr/lib/x86_64-linux-gnu/libstdc++.so.6
      #3  0x0000000000435a5b in backtrace_terminate_handler() () at /home/couchbase/jenkins/workspace/memcached-gerrit-watson/label/ubuntu-1204/memcached/utilities/terminate_handler.cc:63
      #4  0x00002b5bb1a5fce6 in ?? () from /usr/lib/x86_64-linux-gnu/libstdc++.so.6
      #5  0x00002b5bb1a5fd31 in std::terminate() () from /usr/lib/x86_64-linux-gnu/libstdc++.so.6
      #6  0x00002b5bb1a5ff48 in __cxa_throw () from /usr/lib/x86_64-linux-gnu/libstdc++.so.6
      #7  0x00002b5bb06f8540 in cb_mutex_enter () at /home/couchbase/jenkins/workspace/memcached-gerrit-watson/label/ubuntu-1204/platform/src/cb_pthreads.cc:195
      #8  0x00002b5bb3c22935 in item_scrubber_main () at /home/couchbase/jenkins/workspace/memcached-gerrit-watson/label/ubuntu-1204/memcached/engines/default_engine/items.c:1083
      #9  0x00002b5bb3c1d472 in ScrubberTask::run() () at /home/couchbase/jenkins/workspace/memcached-gerrit-watson/label/ubuntu-1204/memcached/engines/default_engine/engine_manager.cc:177
      #10 0x00002b5bb3c1d781 in scrubber_task_main(void*) () at /home/couchbase/jenkins/workspace/memcached-gerrit-watson/label/ubuntu-1204/memcached/engines/default_engine/engine_manager.cc:137
      #11 0x00002b5bb06f805a in platform_thread_wrap(void*) () at /home/couchbase/jenkins/workspace/memcached-gerrit-watson/label/ubuntu-1204/platform/src/cb_pthreads.cc:54
      #12 0x00002b5bb0918e9a in start_thread (arg=0x2b5bbac02700) at pthread_create.c:308
      #13 0x00002b5bb201038d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
      #14 0x0000000000000000 in ?? ()
      

      Attachments

        For Gerrit Dashboard: MB-18786
        # Subject Branch Project Status CR V

        Activity

          People

            trond Trond Norbye
            drigby Dave Rigby (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty