MB-18786: Fix race condition

Initialize the engine handle before inserting into the list of
created engines.

Change-Id: Ib0ef7ccc42730af329a78e6e031f0fe254f40ab1
Reviewed-on: http://review.couchbase.org/61766
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Will Gardner <will.gardner@couchbase.com>